[package]
edition = "2021"
name = "neontap"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Board Support Packages - only one should be active
rp-pico = { version = "0.9", optional = true }
seeeduino-xiao-rp2040 = { version = "0.6.0", optional = true }

usbd-serial = "0.2"
usb-device = "0.3"
panic-halt = "0.2"

[features]
# default = ["pico"]
pico = ["rp-pico"]
xiao = ["seeeduino-xiao-rp2040"]

# Ensure only one board feature is active
[package.metadata.docs.rs]
all-features = false
default-features = ["pico"]

# Binary configurations for different boards
[[bin]]
name = "neontap_pico"
path = "src/main.rs"
required-features = ["pico"]

[[bin]]
name = "neontap_xiao"
path = "src/main.rs"
required-features = ["xiao"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3